# juzzy-agent-strategies

./: PRIVACY.md  README.md  main.py  manifest.yaml  pyproject.toml
output_parser/: cot_output_parser.py
prompt/: template.py
provider/: agent.py  agent.yaml
strategies/: ReAct.py  ReAct.yaml  _base.py  function_calling.py  function_calling.yaml
