[project]
name = "juzzy-agent-strategies"
version = "0.0.36"
description = "Function Calling and ReAct agent strategies for Dify"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dify_plugin>=0.5.0,<0.6.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.2",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_subclassing_any = false
exclude = [".venv"]
explicit_package_bases = true
mypy_path = "."

[[tool.mypy.overrides]]
module = "dify_plugin.*"
ignore_missing_imports = true
